# WhenShouldUBuyBitcoin

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf.example  package-lock.json  package.json  pyproject.toml  test_binance_oi.py  vitest.config.js
.github/workflows/: test.yml  update-data.yml
data/: btc_metadata.json  btc_metrics.csv
dca_service/: .env.example  README.md  migrate_db.py  pyproject.toml  test_transaction_sorting.py
dca_service/data/: metrics.csv
dca_service/src/dca_service/: config.py  database.py  main.py  models.py  scheduler.py  sse.py
dca_service/src/dca_service/api/: auth_api.py  binance_api.py  cold_wallet_api.py  dca_api.py  debug_api.py  email_settings_api.py  manual_api.py  routes.py  schemas.py  schemas_strategy.py  stats_api.py  strategy_api.py  wallet_api.py
dca_service/src/dca_service/auth/: __init__.py  csrf.py  dependencies.py  password.py
dca_service/src/dca_service/core/: logging.py
dca_service/src/dca_service/data/: wealth_distribution.json
dca_service/src/dca_service/migrations/: __init__.py  add_execution_mode.py
dca_service/src/dca_service/services/: binance_client.py  dca_engine.py  distribution_scraper.py  mailer.py  metrics_provider.py  security.py  sync_service.py
dca_service/src/dca_service/templates/: binance_settings.html  index.html  login.html  stats.html  strategy.html
dca_service/tests/: conftest.py  test_api.py  test_auth.py  test_binance_api.py  test_binance_live.py  test_clear_simulated.py  test_db_migration.py  test_dca_api.py  test_dca_email_integration.py  test_dca_engine.py  test_distribution_scraper.py  test_dynamic_strategy.py  test_email_endpoint.py  test_email_settings_api.py  test_engine.py  test_engine_dynamic.py  test_engine_real.py  test_execution_frequency.py  test_legacy_regression.py  test_mailer.py  test_manual_transactions.py  test_manual_transactions.py.BROKEN  test_metrics.py  test_metrics_pluggable.py  test_metrics_source_and_transactions.py  test_migration_and_budget.py  test_multiplier_zero.py  test_scheduler.py  test_stats.py  test_stats_resilience.py  test_sync_no_duplicates.py  test_ui_refactor.py  test_ux_and_strategy.py
docs/: README.md  SECURITY.md  backtest.js  backtest.test.js  index.html  realtime.js  responsive.test.js
docs/charts/: futures_oi.html  oi_quadrant.html  oi_quadrant_info.json
docs/data/: btc_metadata.json  btc_metrics.csv  oi_cache.json
scripts/: binance_order_executor.py  cleanup_duplicate_dca.py  create_admin.py  migrate_strategy_columns.py  test_email_template.py  update_distribution_data.py
src/whenshouldubuybitcoin/: __init__.py  data_fetcher.py  metrics.py  persistence.py  realtime_check.py  visualization.py
src/whenshouldubuybitcoin/providers/: alternative_me.py  binance_api.py  blockchain_data.py
src/whenshouldubuybitcoin/strategies/: dynamic_ahr999.py
tests/: test_data_fetcher.py  test_yaxis_autoscale.py
