[project]
name = "dca-service"
version = "0.1.0"
description = "Minimal BTC DCA Backend Service"
authors = [
    {name = "User",email = "user@example.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.121.3,<0.122.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
